force-app/main/default/objects/Event_MDF__c/fields/Agreement_Details__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Details__c</fullName>
    <label>Agreement Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>