force-app/main/default/objects/Event_MDF__c/fields/MDF_Partner_Contact__c.field-meta.xml
<CustomField>
    <fullName>MDF_Partner_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>MDF Partner Contact</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.Account.Id</field>
            <operation>equals</operation>
            <valueField>$Source.MDF_Partner_Account__c</valueField>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Event MDFs</relationshipLabel>
    <relationshipName>Event_MDFs</relationshipName>
    <type>Lookup</type>
</CustomField>